# clipkit

./: .env.example  .gitignore  README.md  pyproject.toml
gemini_cli/: README.md  __init__.py  cli.py
image_search_cli/: README.md  __init__.py  cli.py
youtube_cli/: README.md  __init__.py  browser.py  cli.py  downloader.py
